--- a/ff-files/docker-compose.yml
+++ b/ff-files/docker-compose.yml
@@ -1,25 +1,25 @@
-version: '3.8'
+version: '3'
 
 services:
   app:
     build: .
     ports:
       - "8080:8080"
-    environment:
-      - SERVER_PORT=8080
-      - POSTGRES_HOST=postgres
-      - POSTGRES_PORT=5432
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=ff_files
-      - MINIO_ENDPOINT=minio:9000
-      - MINIO_ACCESS_KEY=minioadmin
-      - MINIO_SECRET_KEY=minioadmin
-      - MINIO_BUCKET=ff-files
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-      - TVM_BASE_URL=http://tvm:8081
-      - TVM_SERVICE_ID=1
+#    environment:
+#      - SERVER_PORT=8080
+#      - POSTGRES_HOST=postgres
+#      - POSTGRES_PORT=5432
+#      - POSTGRES_USER=postgres
+#      - POSTGRES_PASSWORD=postgres
+#      - POSTGRES_DB=ff_files
+#      - MINIO_ENDPOINT=minio:9000
+#      - MINIO_ACCESS_KEY=minioadmin
+#      - MINIO_SECRET_KEY=minioadmin
+#      - MINIO_BUCKET=ff-files
+#      - REDIS_HOST=redis
+#      - REDIS_PORT=6379
+#      - TVM_BASE_URL=http://tvm:8081
+#      - TVM_SERVICE_ID=1
     networks:
       - shared_network
     depends_on:
@@ -36,6 +36,12 @@ services:
     volumes:
       - minio_data:/data
     command: server /data --console-address ":9001"
+    restart: unless-stopped
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:9000/minio/health/live" ]
+      interval: 30s
+      timeout: 20s
+      retries: 3
     networks:
       - shared_network
 
