--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,7 @@ fabric.properties
 !.idea/runConfigurations
 
 # End of https://www.toptal.com/developers/gitignore/api/goland+all,go
+
+*.log
+
+.DS_Store
