--- a/ff-split/config/config.yaml
+++ b/ff-split/config/config.yaml
@@ -13,10 +13,10 @@ redis:
   port: 6379
   password: ""
 
-auth_client:
-  host: localhost
+auth:
+  host: http://localhost
   port: 8084
-  update_interval: 60
+  update_interval: 10
 
 file_service:
   base_url: http://localhost:8082
