Обновил зависимости и добавил cors

--- a/ff-auth/Dockerfile
+++ b/ff-auth/Dockerfile
@@ -1,5 +1,8 @@
 # Этап сборки
-FROM golang:1.23-alpine AS builder
+FROM golang:1.24-alpine AS builder
+
+# Устанавливаем git для скачивания Go модулей
+RUN apk add --no-cache git
 
 WORKDIR /app
 
