FF-split Переведён на api first

--- a/ff-split/Makefile
+++ b/ff-split/Makefile
@@ -1,4 +1,4 @@
-.PHONY: build run clean test
+.PHONY: build run clean test generate
 
 # Переменные
 APP_NAME = ff-split
@@ -43,4 +43,11 @@ migrate-up:
 	migrate -path migrations -database "postgres://postgres:postgres@localhost:5432/ff_split?sslmode=disable" up
 
 migrate-down:
-	migrate -path migrations -database "postgres://postgres:postgres@localhost:5432/ff_split?sslmode=disable" down 
+	migrate -path migrations -database "postgres://postgres:postgres@localhost:5432/ff_split?sslmode=disable" down
+
+# Генерация кода из OpenAPI спецификации
+generate:
+	oapi-codegen -package api -generate types -o pkg/api/types.gen.go pkg/api/openapi.yaml
+	oapi-codegen -package api -generate client -o pkg/api/client.gen.go pkg/api/openapi.yaml
+	oapi-codegen -package api -generate gin-server -o pkg/api/server.gen.go pkg/api/openapi.yaml
+	oapi-codegen -package api -generate spec -o pkg/api/spec.gen.go pkg/api/openapi.yaml 
